# py_pio_counter

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
python_src/pio_counter/: __init__.py
wrap_src/: counter.c  counter.pio.h  counter_lib.c  counter_lib.h  pio_counter.c
