[build-system]
requires = ["setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "pio-counter"
description = "PIO postive edge period counter."
requires-python = ">=3.8"
dependencies = []
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["python_src"]
include = ["pio_counter*"]
namespaces = false
